--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 
 To play the game, if you are on Linux go into the linux_build folder and double click tetris. 
 If you are on Windows, go into the windows_build folder and double click the tetris.exe executable.
-Please do not move the executables to different folders as they rely on the data, images and audio folders for the game to run.
+Please do not move the executables to different folders as they rely on the data, images, fonts and audio folders for the game to run.
 
 You must download python 3.7.0 and pygame via pip if you want to be able to run the scripts via the python3 command (or python if you are on Windows).
 Double click on the tetris.py file to run it or use the console and type python tetris.py.
